<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TODOList</string>
    <string name="all_lists">all lists</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="item_name">name:</string>
    <string name="item_name_hint">name of the item</string>
    <string name="item_curr_count">goal count:</string>
    <string name="item_curr_count_hint">goal count for the item</string>
    <string name="empty">empty</string>
    <string name="partially">partially filled</string>
    <string name="filled">filled</string>
    <string name="optional">optional to have</string>
    <string name="filter_colors">show:</string>
    <string name="sort">sort by:</string>
    <string name="list_name">name:</string>
    <string name="list_name_hint">name of the list</string>
    <string name="list_clipboard">list to clipboard</string>
    <string name="export_list">export to file</string>
    <string name="import_list">import from file</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="sort_order">Sorting order</string>
    <string name="bg">Scrollable Background</string>
    <string name="edit_item">edit item</string>
    <string name="items">items</string>
    <string name="lists">lists</string>
    <string name="filter">filter</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="current_value">Current value</string>
    <string name="ideal_value">Ideal value</string>
    <string name="age">Time created</string>
    <string name="last_used">Last used</string>
    <string name="most_used">Most used</string>
    <string name="filled_type">Color</string>
</resources>