<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context="com.pospecstudio.todolist.EditListActivity"
                                                   android:background="@drawable/page_background">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/transparent"
        />
        <TextView
                android:text="@string/list_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/name_text" style="@style/text"
                android:gravity="start" android:fontFamily="monospace" android:textAllCaps="true"
                android:paddingLeft="10dp" android:paddingRight="10dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/edit_name" android:minHeight="48dp"
                android:inputType="text" style="@style/input_field" android:hint="@string/list_name_hint"
                android:autofillHints=""/>
        <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:layout_weight="10"/>
        <Button
                android:text="@string/list_clipboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/to_clipboard"
                android:onClick="listToClipboard"
                android:focusable="false"
                style="@style/bottom_panel_button" android:backgroundTint="@color/blue_500" android:layout_weight="0"/>
        <Button
                android:text="@string/export_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/export_to_csv"
                android:onClick="exportToCSV"
                android:focusable="false"
                style="@style/bottom_panel_button" android:backgroundTint="@color/blue_500" android:layout_weight="0"/>
        <Button
                android:text="@string/import_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/import_from_csv"
                android:onClick="importCSV"
                android:focusable="false"
                style="@style/bottom_panel_button" android:backgroundTint="@color/blue_500" android:layout_weight="0"/>
        <Button
                android:text="@string/delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/delete_item"
                android:onClick="deleteList"
                android:focusable="false"
                style="@style/bottom_panel_button" android:backgroundTint="@color/red_500" android:layout_weight="0"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:gravity="center" android:background="@drawable/panel_background"
                android:layout_weight="0">
            <Button
                    android:text="@string/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/apply" android:layout_weight="1"
                    android:onClick="applyEdit"
                    style="@style/bottom_panel_button"/>
            <Button
                    android:text="@string/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/cancel_edit" android:layout_weight="1"
                    android:onClick="cancelEdit"
                    style="@style/bottom_panel_button"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>